A few new additions and fixes.

--- a/src/main/resources/TODO.text
+++ b/src/main/resources/TODO.text
@@ -1,3 +1,17 @@
--register password and confirm password to be the same X
+-register password and confirm password to be the same ✓
 
--to show that register password and confirm password are not the same X
+-to show that register password and confirm password are not the same ✓
+
+HTML PAGES:
+REGISTER ✓
+LOGIN ✓
+HOME ✓
+PRODUCT CATEGORIES ✓
+    INDIVIDUAL FLOWERS PAGE
+    BOUQUETS PAGE
+    PRESENTS PAGE
+    SPECIAL OFFERS PAGE
+PRODUCT ADD ✓
+CONTACTS ✓
+ADMIN
+LOCATIONS?
