Started implementing product-add logic.

--- a/src/main/resources/TODO.text
+++ b/src/main/resources/TODO.text
@@ -2,6 +2,10 @@
 
 -to show that register password and confirm password are not the same ✓
 
+-add product
+
+-display the products in the categories
+
 HTML PAGES:
 REGISTER ✓
 LOGIN ✓
