Changed the products page, it now has filters for the products and add to cart button works.

--- a/src/main/resources/TODO.text
+++ b/src/main/resources/TODO.text
@@ -10,7 +10,7 @@
 
 -continue with the logic to display all contact messages to messages page ✓
 
--fix the messages drop down menu
+-fix the messages drop down menu ✓
 
 -implement logic for adding products to CART
 
